--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,66 @@
 [submodule "pack/plugins/start/vim-airline"]
 	path = pack/plugins/start/vim-airline
 	url = https://github.com/vim-airline/vim-airline.git
+[submodule "pack/plugins/start/vim-snipmate"]
+	path = pack/plugins/start/vim-snipmate
+	url = https://github.com/garbas/vim-snipmate.git
+[submodule "pack/plugins/start/vim-addon-mw-utils"]
+	path = pack/plugins/start/vim-addon-mw-utils
+	url = https://github.com/MarcWeber/vim-addon-mw-utils.git
+[submodule "pack/plugins/start/tlib_vim"]
+	path = pack/plugins/start/tlib_vim
+	url = https://github.com/tomtom/tlib_vim.git
+[submodule "pack/plugins/start/srcery-vim"]
+	path = pack/plugins/start/srcery-vim
+	url = https://github.com/srcery-colors/srcery-vim
+[submodule "pack/plugins/start/vim-markdown"]
+	path = pack/plugins/start/vim-markdown
+	url = https://github.com/plasticboy/vim-markdown.git
+[submodule "pack/plugins/start/nerdcommenter"]
+	path = pack/plugins/start/nerdcommenter
+	url = https://github.com/scrooloose/nerdcommenter.git
+[submodule "pack/plugins/start/nerdtree"]
+	path = pack/plugins/start/nerdtree
+	url = https://github.com/scrooloose/nerdtree.git
+[submodule "pack/plugins/start/vim-rust"]
+	path = pack/plugins/start/vim-rust
+	url = https://github.com/rust-lang/rust.vim
+[submodule "pack/plugins/start/vim-snippets"]
+	path = pack/plugins/start/vim-snippets
+	url = https://github.com/honza/vim-snippets.git
+[submodule "pack/plugins/start/tagbar"]
+	path = pack/plugins/start/tagbar
+	url = https://github.com/majutsushi/tagbar.git
+[submodule "pack/plugins/start/vim-multiple-cursors"]
+	path = pack/plugins/start/vim-multiple-cursors
+	url = https://github.com/terryma/vim-multiple-cursors
+[submodule "pack/plugins/start/vim-flake8"]
+	path = pack/plugins/start/vim-flake8
+	url = https://github.com/nvie/vim-flake8.git
+[submodule "pack/plugins/start/vim-json"]
+	path = pack/plugins/start/vim-json
+	url = https://github.com/elzr/vim-json
+[submodule "pack/plugins/start/vimtex"]
+	path = pack/plugins/start/vimtex
+	url = https://github.com/lervag/vimtex.git
+[submodule "pack/plugins/start/indentline"]
+	path = pack/plugins/start/indentline
+	url = https://github.com/yggdroot/indentline
+[submodule "pack/plugins/start/trailing-ws"]
+	path = pack/plugins/start/trailing-ws
+	url = https://github.com/bronson/vim-trailing-whitespace
+[submodule "pack/plugins/start/speeddating"]
+	path = pack/plugins/start/speeddating
+	url = https://github.com/tpope/vim-speeddating.git
+[submodule "pack/plugins/start/surround"]
+	path = pack/plugins/start/surround
+	url = https://github.com/tpope/vim-surround.git
+[submodule "pack/plugins/start/unimpaired"]
+	path = pack/plugins/start/unimpaired
+	url = https://github.com/tpope/vim-unimpaired.git
+[submodule "pack/plugins/start/repeat"]
+	path = pack/plugins/start/repeat
+	url = https://github.com/tpope/vim-repeat.git
+[submodule "pack/plugins/start/tabular"]
+	path = pack/plugins/start/tabular
+	url = https://github.com/godlygeek/tabular.git
